<resources>
    <string name="app_name">LearnAndroidOpenGL</string>
    <string name="primitive">图元绘制</string>
    <string name="projections">投影变换</string>
    <string name="draw_cube">正方体绘制</string>
    <string name="testure">纹理贴图</string>
    <string name="draw_ball">球体绘制</string>
    <string name="illumination">环境光照</string>
    <string name="diffuse" >散射光照</string>
    <string name="specular">镜面光照</string>
</resources>
