<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onPrimitiveClick"
                android:text="@string/primitive" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onProjectionClick"
                android:text="@string/projections" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDrawCubeClick"
                android:text="@string/draw_cube" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTextureClick"
                android:text="@string/testure" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDrawBallClick"
                android:text="@string/draw_ball" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onIlluminationClick"
                android:text="@string/illumination" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onDiffuseClick"
                android:text="@string/diffuse" />

            <Button
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onSpecularClick"
                android:text="@string/specular" />
        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>